2007-01-15  Nurdin Premji  <npremji@redhat.com>

	* TestExec.java: Ran GNU formatter.
	* TestTaskTerminateObserver.java: Ran GNU formatter.
	 (check):Changed to use StopEventLoopWhenProcRemoved.
	 	
	* TestExec.java (testTaskBlockExec): Changed to use StopEventLoopWhenProcRemoved.
	(testProcBlockExec): Ditto.
	
	* Proc.java: Removed proc.ppid.
	* TestLib.java: Removed proc.ppid.

	* TestLib.java: Ran gnu formatter.
	(isChildOf): Changed to use proc.ppid rather than proc.parent.
	* Proc.java: Ran gnu formatter.
	(Proc): Added variable ppid to store parent pid, use frysk.sys.proc.Stat to fill.

2007-01-15  Andrew Cagney  <cagney@redhat.com>

	* IsaFactory.java: Replace Build.BUILD_ARCH with
	Config.getTargetCpuXXX.

2007-01-15  Mark Wielaard  <mark@klomp.org>

	Fixes bug #3240
	* TestBreakPoints.java (testInsertRemove): Make sure the observer
	is properly installed.

2007-01-15  Mark Wielaard  <mark@klomp.org>

	Fixes bug #3676
	* Breakpoint.java (stepDone): Only set if still installed.
	(isInstalled): new method.
	(toString): Prettify.
	* IsaIA32.java (isTaskStepped): Reset flag.
	* IsaX8664.java (isTaskStepped): Likewise.
	* LinuxIa32On64.java (LinuxIa32On64): Install IndirectRegisters for
	d0 till d7.
	* LinuxPtraceTaskState.java (Running.sendContinue): Rewritten to take
	breakpoints into account.
	(Running.handleStoppedEvent): Fix log message. Call sendContinue()
	on new state.
	(Running.handleTrappedEvent): Rewritten.
	(running, syscallRunning, inSyscallRunning, inSyscallRunningTraced):
	Now have type Running.
	(BlockedSignal.handleUnblock): Call sendContinue() on new state.
	* TestTaskObserverInstruction.java: Don't test Isa.isTaskStepped().
	* TestTaskObserverInstructionAndCode.java: Enable.

2007-01-12  Mark Wielaard  <mark@klomp.org>

	* Isa.java (isTaskStepped): New method.
	* IsaIA32.java (I387_OFFSET): Removed unused field.
	(DBG_OFFSET): Document how to get value.
	(getRegisterBankBuffers): Add "USR" bank.
	(DBGRegister): New static class.